--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
-[Bb]in/
+#[Bb]in/ want to keep bun folder for distributing driver along with it
 [Oo]bj/
 
 # mstest test results
